splitview: Workaround for artifacts on split view indicators.

Some artifacts show up on intel devices on the splitview indicators
highlights, which are rounded_rect_views. Use addCircle and addRect
as a temporary workaround.

Test: manual
Bug: 824564
Change-Id: Ic5bee0b6eaf412ea5fa569afefcde66843af4e4c
Reviewed-on: https://chromium-review.googlesource.com/986974
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547354}
Former-commit-id: a9ce932269f8cf73d718047bedba984b770d23a6